# dasVulkan

./: .gitignore  CMakeLists.txt  module_resolve.inc  shader_frag.glsl
daslib/: sync.das  vulkan_boost.das  vulkan_simple.das  vulkan_simple_app.das
daslib/internal/: buffer.das  buffer_ex.das  command.das  command_ex.das  core.das  debug.das  descriptor_pool.das  descriptor_set.das  device.das  device_ex.das  framebuffer.das  generated.das  glfw.das  helpers_for_generated.das  image.das  instance.das  instance_ex.das  memory.das  memory_ex.das  pipeline.das  pipeline_ex.das  preamble_for_generated.das  pregenerated.das  queries.das  render_pass.das  setup.das  surface_type.das  swap_chain.das  swapchain.das  sync.das  window.das
daslib/private/: core.das  device.das  swap_chain.das
example/: app_module.cpp  frag.glsl  frag.spv  main.cpp  main.das  vert.glsl  vert.spv  vulkan_binding_config.py  vulkan_headers_to_bind.h  vulkan_module.cpp  vulkan_module_generated.inc
examples/vulkan/: vulkan_binding_config.py  vulkan_module.cpp
include/dasVulkan/: headers_to_bind.h  module.h  module_custom.h  module_generated.h  module_generated.h.inc
src/: .gitignore  binding_config.py  boost_generator.py  boost_preamble.das  custom.cpp  module.cpp  module.h  module_boost_generated.inc  module_boost_pregenerated.inc  module_generated.cpp.inc  module_generated.inc  module_generated_0.cpp  module_generated_1.cpp  module_generated_10.cpp  module_generated_11.cpp  module_generated_12.cpp  module_generated_13.cpp  module_generated_14.cpp  module_generated_15.cpp  module_generated_2.cpp  module_generated_3.cpp  module_generated_4.cpp  module_generated_5.cpp  module_generated_6.cpp  module_generated_7.cpp  module_generated_8.cpp  module_generated_9.cpp  module_pregenerated.cpp.inc  module_pregenerated.inc  preamble_for_generated.das  vulkan_binding_config.py  vulkan_module.cpp  vulkan_module_generated.inc
